tests/error/self_errors/free_function.err
Error: Invalid type (at $FILE:7:12)
  | 
5 | 
6 | @guppy
7 | def main(x: Self) -> None:
  |             ^^^^ `Self` type annotations are only allowed in methods

Guppy compilation failed due to 1 previous error
